[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
sha2 = "0.10.5"
libp2p = {version = "0.49", features = ["mdns", "mplex", "gossipsub", "identify", "noise", "mplex", "tcp"]}
tokio = { version = "1.21.2", features = [ "full" ] }
hex = "0.4"
log = "0.4"
pretty_env_logger = "0.4"
