[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
sha2 = "0.10.5"
libp2p = {version = "0.49", features = ["mplex", "gossipsub", "identify", "noise", "mdns-async-io", "tcp", "tokio", "rsa", "kad"]}
tokio = { version = "1.15", features = [ "io-util", "fs", "io-std", "macros", "rt", "rt-multi-thread", "sync" ] }
hex = "0.4"
log = "0.4"
pretty_env_logger = "0.4"
once_cell = "1.16"
futures = "0.3"
async-std = "1.12"
speedy = "0.8.4"
clap = "4.0.26"
